adding realtime  reservation , also gotta fix getavailabale time  funcion